# saxml

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  idf_component.yml  library.json  saxml.c  saxml.h
.github/workflows/: cmake.yml
cmake/: helpers.cmake
include/saxml/: saxml.h
src/: helpers.h  saxml.c
test/: .gitignore  CMakeLists.txt  Makefile  main.c  test.xml  test3.xml
vectors/: result1.txt  result2.txt  result3.txt  result4.txt  test2.xml  test3.xml  test4.xml
